# togramps

./: .gitignore  README.md  cli.py  pyproject.toml
example/: Example.csv  Example.ftz  node.ftt
src/togramps/: core.py
